# fixed_point_trickery

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
models/: ISS.glb  apollo_lunar_module.glb  jwst.glb  suzanne.glb
shaders/: BoundingBox.hlsl  BoundingBoxTextured.hlsl  CpuDouble.hlsl  EmulateDouble.hlsl  EmulatedDouble.hlsl  F32.hlsl  GpuDouble.hlsl  Parallax.hlsl  PassThrough.hlsl  Rtc.hlsl  RteGpu.hlsl  TexturedQuad.hlsl  colored_normals.slang  colored_triangle.slang  pbr.hlsl
src/: BufferSystem.cpp  BufferSystem.hpp  DeviceQueue.hpp  Handle.hpp  RendererInit.ixx  arcball_camera.cpp  arcball_camera.h  dx.cpp  dx.hpp  main.cpp  modelLoader.cpp  modelLoader.hpp  scene.hpp  shaderWatcher.cpp  shaderWatcher.hpp  utils.cpp  utils.hpp
src/methods/: CpuDouble.cpp  CpuDouble.hpp  F32.cpp  F32.hpp  GpuDouble.cpp  GpuDouble.hpp  GpuEmulatedDouble.cpp  GpuEmulatedDouble.hpp  Parallax.cpp  Parallax.hpp  Rtc.cpp  Rtc.hpp  RteGpu.cpp  RteGpu.hpp
src/tests/: BufferTests.cpp  D3DFixture.hpp  shaderWatcherTests.cpp
